Fix scrolling issues by removing overflow locks

--- a/index.css
+++ b/index.css
@@ -24,6 +24,8 @@ body {
     color: #3c434a;
     font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     display: flex;
+    min-height: 100vh;
+    overflow-x: hidden;
 }
 
 /* Sidebar */
